# SoftEngProject_Pegasus

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Influx_script.txt  data_schema.json  database_script.txt  dummy_data_postgres.txt  index.html  influx_erd.puml  map.psql  platformio.ini  postgres_erd.puml  postgres_script.txt  sprint 1.md  sprint 2.md  sprint 3.md  sprint 4.md  timeline.puml
Aggregator/: _init__.py
JSdoc/: Graph.html  ProbeOption.html  TabButton.html  index.html
ProgressReports/: 2020-11-03.md  2020-11-06.md  2020-11-17.md  2020-11-17_Angus_SystemRequirements.md  2020-11-20.md  2020-11-24.md  2020-11-24_Evening.md  2020-12-01.md  2020-12-04.md  2020-12-08.md  2020-12-10.md  2021-01-05-17-15.md  2021-01-12-17-05.md  2021-01-15-18-00.md  2021-01-19-17-00.md  2021-01-28-13-30.md  2021-02-06-16-30.md  2021-02-08-10-40.md  2021-02-09-11-00.md  2021-02-11-14-50.md  2021-02-12-15-00.md  2021-02-15-11-00.md  2021-02-16-10-15.md  2021-02-16-10-18.md  2021-02-19-12-00.md  2021-02-22-11-00.md  2021-02-25-10-00.md  2021-03-01-11-30.md  2021-03-07-15-30.md  2021-03-08-11-00.md  2021-03-09-11-10.md  2021-03-11-11-00.md  2021-03-15-11-00.md  2021-04-01-12-00 .md  ProgressReports.list
_posts/: 2020-10-30-First Progress Report.md
docs/: 404.html  Home.markdown  _config.yml  aggregator.markdown  agregator.markdown  database.markdown  dependancies.markdown  dependencies.markdown  index.markdown  install.markdown  probe.markdown  testing.markdown  userguides.markdown  videoDemo.markdown  webapp.markdown  webappclient.markdown
public/: README.md
src/: main.rs  (+10 more)
(+283 files in other folders)
