[package]
name = "pegassas-aggregator"
version = "0.1.0"
authors = ["ZacJW <11651573+ZacJW@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssdp-client = "1.0.0"
tokio = {version ="1.2.0", features = ["full"]}
futures-util = "0.3.13"
futures-core = "0.3.13"
